--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.js"></script><link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&amp;subset=cyrillic" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"/>
 <link rel='stylesheet' type='text/css' href='sltv.css'>
-<meta property="og:type" content="article" />
-<meta property="og:title" content='best cybersport platform' />
-<meta property="og:description" content='cool style design for you' />
-<meta property="og:url" content='summerstreet.pp.ua' />
-<meta property="og:image" content='images/ui/starseries.png' />
+<meta name='description' content='best cybersport platform'>
+<meta property="og:type" content="article"/>
+<meta property="og:title" content='STARLADDER'/>
+<meta property="og:description" content='best cybersport platform'/>
+<meta property="og:url" content='summerstreet.pp.ua'/>
+<meta property="og:image" content='images/ui/starseries.png'/>
 </head> 
 <body>
 <header>
